RESOLVED FIXED109905
Calculate EventPath in EventDispatcher's constructor.
https://bugs.webkit.org/show_bug.cgi?id=109905
Summary Calculate EventPath in EventDispatcher's constructor.
Hayato Ito
Reported 2013-02-15 00:14:00 PST
I can not find any reason to initialize an EventPath lazily. We can calculate an EventPath in EventDispatcher's constructor and remove EventDispatcher::ensureEventPath() after bug 109898 is fixed.
Attachments
Calculates an EventPath in the constructor (7.20 KB, patch)
2013-02-15 00:19 PST, Hayato Ito
no flags
Patch for landing (7.20 KB, patch)
2013-02-17 22:36 PST, Hayato Ito
no flags
Patch for landing (7.24 KB, patch)
2013-02-19 02:58 PST, Hayato Ito
no flags
Hayato Ito
Comment 1 2013-02-15 00:19:08 PST
Created attachment 188496 [details] Calculates an EventPath in the constructor
Hayato Ito
Comment 2 2013-02-15 00:20:21 PST
The uploaded patch depends on the patch in bug 109898.
Hayato Ito
Comment 3 2013-02-17 22:36:19 PST
Created attachment 188798 [details] Patch for landing
WebKit Review Bot
Comment 4 2013-02-17 23:29:04 PST
Comment on attachment 188798 [details] Patch for landing Rejecting attachment 188798 [details] from commit-queue. New failing tests: fast/events/touch/gesture/pad-gesture-cancel.html Full output: http://queues.webkit.org/results/16610104
Hayato Ito
Comment 5 2013-02-17 23:38:06 PST
Hmm. fast/events/touch/gesture/pad-gesture-cancel.html has been crashed without this patch locally. Let me retry cq+. (In reply to comment #4) > (From update of attachment 188798 [details]) > Rejecting attachment 188798 [details] from commit-queue. > > New failing tests: > fast/events/touch/gesture/pad-gesture-cancel.html > Full output: http://queues.webkit.org/results/16610104
WebKit Review Bot
Comment 6 2013-02-18 00:34:54 PST
Comment on attachment 188798 [details] Patch for landing Rejecting attachment 188798 [details] from commit-queue. New failing tests: fast/events/touch/gesture/pad-gesture-cancel.html Full output: http://queues.webkit.org/results/16545079
WebKit Review Bot
Comment 7 2013-02-18 00:48:59 PST
Comment on attachment 188798 [details] Patch for landing Attachment 188798 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/16613055 New failing tests: fast/events/touch/gesture/pad-gesture-cancel.html
Hayato Ito
Comment 8 2013-02-19 02:58:20 PST
Created attachment 189034 [details] Patch for landing
Hayato Ito
Comment 9 2013-02-19 02:59:08 PST
Let me cq+ tomorrow to watch the result. (In reply to comment #8) > Created an attachment (id=189034) [details] > Patch for landing
WebKit Review Bot
Comment 10 2013-02-19 19:07:15 PST
Comment on attachment 189034 [details] Patch for landing Clearing flags on attachment: 189034 Committed r143426: <http://trac.webkit.org/changeset/143426>
WebKit Review Bot
Comment 11 2013-02-19 19:07:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.