Calculate EventPath in EventDispatcher's constructor. https://bugs.webkit.org/show_bug.cgi?id=109905

Reviewed by Dimitri Glazkov.

This patch calculates an EventPath in EventDispatcher's
constructor and removes EventDispatcher::ensureEventPath().
We don't have any reason to initialize an EventPath lazily.

No tests. No change in behavior.

* dom/EventDispatcher.cpp:
(WebCore::EventDispatcher::EventDispatcher):
(WebCore::EventDispatcher::dispatch):
* dom/EventDispatcher.h:
(WebCore::EventDispatcher::eventPath):
(EventDispatcher):
* dom/FocusEvent.cpp:
(WebCore::FocusEventDispatchMediator::dispatchEvent):
(WebCore::BlurEventDispatchMediator::dispatchEvent):
(WebCore::FocusInEventDispatchMediator::dispatchEvent):
(WebCore::FocusOutEventDispatchMediator::dispatchEvent):
* dom/MouseEvent.cpp:
(WebCore::MouseEventDispatchMediator::dispatchEvent):


Canonical link: https://commits.webkit.org/128607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143426 268f45cc-cd09-0410-ab3c-d52691b4dbfc