Source/WebCore/dom/EventDispatcher.h
@@ -61,7 +61,7 @@ public:
     bool dispatch();
     Node* node() const { return m_node.get(); }
     Event* event() const { return m_event.get(); }
-    EventPath& ensureEventPath();
+    EventPath& eventPath() { return m_eventPath; }
 
 private:
     EventDispatcher(Node*, PassRefPtr<Event>);
@@ -77,7 +77,6 @@ private:
     RefPtr<Node> m_node;
     RefPtr<Event> m_event;
     RefPtr<FrameView> m_view;
-    bool m_eventPathInitialized;
 #ifndef NDEBUG
     bool m_eventDispatched;
 #endif
